--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,37 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
-
+@import "github-markdown-css/github-markdown.css";
 
 @layer base {
     h1 {
-        @apply text-4xl font-bold;
+        @apply text-4xl font-bold leading-tight;
     }
+
     h2 {
-        @apply text-3xl font-bold;
+        @apply text-3xl font-bold leading-tight;
     }
+
     h3 {
-        @apply text-2xl font-bold;
+        @apply text-2xl font-bold leading-snug;
+    }
+
+    h4 {
+        @apply text-xl font-bold leading-snug;
+    }
+
+    h5 {
+        @apply text-lg font-bold leading-snug;
+    }
+
+    h6 {
+        @apply text-base font-bold leading-normal;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        @apply mb-4;
+    }
+
+    .anchor {
+        visibility: hidden !important;
     }
 }
