--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,4 +34,10 @@
     .anchor {
         visibility: hidden !important;
     }
+
+    @media (prefers-color-scheme: dark) {
+        .markdown-body, [data-theme="dark"] {
+            --bgColor-default: transparent !important;
+        }
+    }
 }
